<resources>
    <string name="app_name">AppLojaVirtual</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_sair">Sair</string>
    <string name="btn_logar">Logar</string>

    <!-- Form de cadastro de pesso-->
    <string name="txt_nome">Nome</string>
    <string name="txt_email">Email</string>
    <string name="txt_minibio">Mini Bio</string>
    <string name="teste">UTF-8</string>

</resources>
