<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="weslei.com.br.applojavirtual.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:src="@mipmap/logo_interativa"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:id="@+id/lblLogin"
        style="@style/Txt_Padrao"
        android:layout_marginTop="180dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_senha"
        android:id="@+id/lblSenha"
        android:layout_below="@+id/edtLogin"
        style="@style/Txt_Padrao"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLogin"
        android:inputType="text"
        android:layout_below="@+id/lblLogin"
        style="@style/Edt_Padrao"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSenha"
        android:inputType="textPassword"
        android:layout_below="@+id/lblSenha"
        style="@style/Edt_Padrao"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogar"
        android:text="@string/btn_logar"
        android:layout_below="@+id/edtSenha"
        android:onClick="onClickLogar"/>

</RelativeLayout>
