<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="120dp">
    
    <RelativeLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:indeterminate="true"/>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lytTxtNome">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNome"
            android:hint="@string/txt_nome"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lytEmail">
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lytMinibio">
        <EditText
            android:id="@+id/txtMinibio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_minibio"
            android:inputType="text"
            android:lines="5" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sexo:"/>
    <RadioGroup
        android:id="@+id/rbgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Edt_Padrao">
        <RadioButton
            android:id="@+id/rbtMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"/>
        <RadioButton
            android:id="@+id/rbtFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profissão"/>
    <Spinner
        style="@style/Edt_Padrao"
        android:id="@+id/spnProfissao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>
        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar"/>


</LinearLayout>
</ScrollView>